# zilin-rag

./: .gitignore  CLAUDE.md  README.md  api.py  bridge.py  cli.py  config.yaml  dashscope_websearch.py  mcp_server.py  pyproject.toml  requirements.txt  server.py  test_graph_query.py  test_lancedb_fts.py  test_lancedb_jieba.py
config/: intel_sources.yaml
docs/: branch-workflow.md
eval/: gen_golden.py  golden_20.json  retrieval_scorer.py
generate/: context_builder.py
ingest/: distill_template.py  image_processor.py  ingest_all.py  lance_store.py  mineru_extractor.py  pdf_image_extractor.py  pdf_multimodal_ingest.py  ppt_parser.py  semantic_splitter.py  vlm_describer.py  web_reader.py
multimodal/: __init__.py  image_extractor.py  ocr_engine.py  vlm_engine.py
rank/: reranker.py
retrieve/: embedding_manager.py  fts_track.py  graph_track.py  hybrid_retriever.py  query_rewriter.py  vector_track.py
scripts/: bulk_pdf_ingest.py  clean_duplicates_lance.py  clean_stale_lance.py  epub_ingest.py  handler_stats.md  haystack_zhipu_embedder.py  inbox_triage.py  ingest_batch.py  ingest_cloud_fast.py  ingest_incremental.py  intel_reporter.py  intel_sync.py  lance_cleanup.py  migrate_add_tokenized.py  migrate_multimodal_fields.py  model_eval_runner.py  obsidian_summary_filler.py  rag_quality_report.md  rag_quality_test.py  rebuild_paper_meta.py  reconcile_obsidian.py  rescue_watcher.py  research_workflow.py  retrieve_architecture.md  save_to_obsidian.py  stability_test_report.md  test_haystack_pipeline.py  test_multimodal.py  trend_bridge.py  url_ingest.py  verify_system.py  (+2 more)
(+2612 files in other folders)
