[project]
name = "dashscope-websearch-mcp"
version = "0.1.0"
description = "WebSearch MCP using DashScope enable_search"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dashscope-websearch = "dashscope_websearch:main"